# eduassist-gemma-good

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/demo/evals/: gemma_good_24q.jsonl
data/demo/notices/: enrollment-support-notice.md  recovery-exam-notice.md
data/demo/protected/: students.json
data/demo/public/: accessibility-and-inclusion.md  calendar-2026.md  enrollment.md  family-portal.md  health-and-attendance.md
docs/strategy/: field-kit-winning-track-plan.md  gemma-4-optimization.md  orchestration-and-retrieval.md
docs/submission/: demo-script.md  evaluation-plan.md  implementation-status.md  kaggle-submission.md  media-gallery.md  repository-scope.md  stress-test-diagnosis.md  technical-writeup.md
docs/submission/evidence/: sample-outputs.md
infra/compose/: compose.yaml
infra/compose/local-llm/llama-cpp/: run-llama-server.sh
src/eduassist_gemma_good/: __init__.py  action_outputs.py  app.py  config.py  data_store.py  demo_engine.py  eval_cases.py  eval_runner.py  field_kit.py  model_client.py  notice_intake.py  policy.py  question_bank.py  retrieval.py  schema.py  stress_eval.py  text_utils.py  tool_registry.py  tools.py
tests/: test_action_outputs.py  test_demo_engine.py  test_eval_runner.py  test_field_kit.py  test_model_client.py  test_notice_intake.py  test_policy.py  test_question_bank.py  test_retrieval.py  test_stress_eval.py  test_submission_assets.py  test_tool_registry.py
