[project]
name = "eduassist-gemma-good"
version = "0.1.0"
description = "Local-first school assistance demo for the Gemma 4 Good hackathon."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.75.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.0.1",
    "streamlit>=1.44.0",
]

[project.scripts]
eduassist-gemma-good-eval = "eduassist_gemma_good.eval_runner:main"
eduassist-gemma-good-stress = "eduassist_gemma_good.stress_eval:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eduassist_gemma_good"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-s"
